# aruco_minium

./: .gitignore  README.md
aruco/: .gitignore  CMakeLists.txt  ChangeLog  Makefile  README.md  riscv64-musl.cmake
aruco/doc/: aruco部署工具设计.md  问题.md
aruco/src/: markerdetector_impl.cpp
aruco/src/fractallabelers/: fractalposetracker.h
aruco/utils/: CMakeLists.txt  aruco_batch_processing.cpp  aruco_print_dictionary.cpp  aruco_print_marker.cpp  aruco_simple.cpp  aruco_test.cpp  aruco_test_no_gui.cpp  aruco_test_no_gui_stream.cpp  aruco_tracker.cpp
aruco/utils_calibration/: aruco_calibration.cpp  aruco_calibration_fromimages.cpp  calibrator.cpp  calibrator.h  dirreader.h
aruco/utils_fractal/: fractal_tracker.cpp
aruco/utils_markermap/: CMakeLists.txt  aruco_create_markermap.cpp  aruco_markermap_pix2meters.cpp  aruco_markermap_setcentralmarker.cpp  aruco_show_markermap.cpp  aruco_simple_markermap.cpp  aruco_test_markermap.cpp  pcdwriter.cpp  sgl.h  sglviewer.h
aruco/xap_aruco/: CMakeLists.txt  xap_aruco.cpp  xap_aruco_gui.cpp
aruco/xap_aruco/xap_external_protocol/: CMakeLists.txt  xap_external_protocol.h  xap_external_protocol_decode.cpp  xap_external_protocol_decode.h
test_files/: camera_param.yml  dr2140.yml  honor_v20_back_640_480.yml
